--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,8 @@
 }
 
 body {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-    background-color: #f5f5f5;
+    font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+    background-color: #f7f7f4;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -24,24 +24,47 @@ body {
 }
 
 .card {
-    background-color: #e7d1ef;
-    border-radius: 20px;
-    padding: 40px 32px;
+    display: flex;
+    flex-direction: column;
+    min-height: 360px;
+    background-color: #f2f1ed;
+    border-radius: 4px;
+    padding: 16px;
     width: 320px;
     flex-shrink: 0;
 }
 
+.card-body {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+h3,
 .card-title {
-    font-size: 32px;
-    font-weight: 600;
-    color: #333;
+    font-size: 22px;
+    line-height: 28px;
+    color: #26251e;
+    font-weight: 400;
     margin-bottom: 8px;
 }
 
 .card-price {
     font-size: 20px;
-    color: #666;
-    margin-bottom: 24px;
+    color: rgba(38, 37, 30, 0.5);
+    display: inline-flex;
+    align-items: baseline
+}
+
+.card-price-amount {
+    font-size: 22px;
+    font-weight: 400;
+    color: rgba(38, 37, 30, 0.5);
+}
+
+.card-price-frequency {
+    font-size: 14px;
+    color: rgba(38, 37, 30, 0.5);
 }
 
 .card-content {
@@ -50,8 +73,8 @@ body {
 
 .includes-text {
     font-size: 16px;
-    color: #333;
-    margin-bottom: 16px;
+    color: rgba(38, 37, 30, 0.5);
+    margin: 16px 0px;
 }
 
 .features-list {
@@ -62,19 +85,20 @@ body {
 .features-list li {
     display: flex;
     align-items: center;
-    margin-bottom: 12px;
-    font-size: 15px;
-    color: #333;
+    margin-bottom: 8px;
+    font-size: 16px;
+    color: #26251e;
 }
 
 .checkmark {
-    color: #4a4a4a;
-    font-size: 18px;
-    margin-right: 12px;
-    font-weight: bold;
+    color: #26251e;
+    font-size: 14px;
+    margin-right: 10px;
+    font-weight: regular;
 }
 
 .download-button {
+    margin-top: auto;
     width: fit-content;
     background-color: #e6e5e0;
     border: none;
